--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <title>Planets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Bevan' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
 </head>
-<body>
+
+<body class="info-boxes">
   <header>
     <h1>Planets</h1>
   </header>
 
 <header>
   <nav>
-    <ul>
+    <ul class="info-boxes">
       <li><a>Introduction</a></li>
       <li><a>Terrestrial planets</a></li>
       <li><a>Mars</a></li>
