--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
   <link href="https://fonts.googleapis.com/css?family=Bevan" rel="stylesheet">
 </head>
 
-<body class="info-boxes">
+<body>
   <header>
     <h1>Planets</h1>
-  </header>
 
-<header>
-  <nav>
-    <ul class="info-boxes">
-      <li><a>Introduction</a></li>
-      <li><a>Terrestrial planets</a></li>
-      <li><a>Mars</a></li>
-      <li><a>Venus</a></li>
-    </ul>
-  </nav>
-</header>
+    <nav>
+      <ul class="info-boxes">
+        <li><a>Introduction</a></li>
+        <li><a>Terrestrial planets</a></li>
+        <li><a>Mars</a></li>
+        <li><a>Venus</a></li>
+      </ul>
+    </nav>
+  </header>
 
 </body>
 </html>
